# ilyvion-util

./: Cargo.toml  README.md
borrowned/: Cargo.toml
borrowned/src/: borrowned.rs  borrowned_box.rs  lib.rs
src/: cache.rs  chrono.rs  color.rs  environment.rs  file.rs  float_extensions.rs  hsv.rs  iterator_extensions.rs  lib.rs  map_any.rs  map_extensions.rs  multi_dimensional.rs  non_nan.rs  ownership.rs  permutation.rs  string_extensions.rs
src/multi_dimensional/: slice2d.rs  vec2d.rs
src/ownership/: borrowned.rs  borrowned_box.rs  ob.rs  obox.rs
