[package]
name = "ilyvion-util"
version = "0.7.0"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
description = "Collection of utility functions and types for use in my personal projects."

[dependencies]
borrowned = { version = "0.1", path = "borrowned", optional = true }
shrinkwraprs = "0.3"
num-traits = { version = "0.2", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
float_eq = "0.7"

[features]
permutation = ["num-traits"]

[workspace]
members = ["borrowned"]
