[package]
name = "ilyvion-util"
version = "0.8.0"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
description = "Collection of utility functions and types for use in my personal projects."

[dependencies]
borrowned = { version = "0.1", path = "borrowned", optional = true }
chrono = { version = "0.4", optional = true }
dotenvy = { version = "0.15", optional = true }
num-traits = { version = "0.2", optional = true }
once_cell = { version = "1.8", optional = true }
paste = "1.0"
shrinkwraprs = "0.3"
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
float_eq = "1.0"

[features]
better-docs = []
environment = ["dotenvy", "once_cell", "thiserror"]
permutation = ["num-traits"]

[workspace]
members = ["borrowned"]

[package.metadata.docs.rs]
all-features = true
